<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>innobot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="macha@inomech.com">Lukas Macha</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>innobot_control_bringup</exec_depend>
  <exec_depend>innobot_control_hardware</exec_depend>

  <exec_depend>myworkcell_support</exec_depend>
  <!-- <exec_depend>rrbot_description</exec_depend> -->
  
  <!-- <exec_depend>ros2_control_test_nodes</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
